[gd_scene load_steps=3 format=3 uid="uid://bci60lemrpeqb"]

[ext_resource type="Script" path="res://main_scenes/player_select/player_select_entry/player_select_entry.gd" id="1_fuqcy"]
[ext_resource type="PackedScene" uid="uid://cvk4q47iay47k" path="res://object_scenes/player/player_model/player_model.tscn" id="2_ban6n"]

[node name="PlayerSelectEntry" type="PanelContainer"]
offset_right = 604.0
offset_bottom = 47.0
script = ExtResource("1_fuqcy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 8

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="PlayerModel" parent="MarginContainer/HBoxContainer/MarginContainer/Panel" instance=ExtResource("2_ban6n")]
position = Vector2(29, 40)
scale = Vector2(0.463033, 0.463033)

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Player Name"
fit_content = true
autowrap_mode = 0

[node name="Separater" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SelectButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Select"

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Delete"

[connection signal="pressed" from="MarginContainer/HBoxContainer/SelectButton" to="." method="_on_select_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
